Login de Administrador

--- a/src/app/features/admin/admin-login/admin-login.html
+++ b/src/app/features/admin/admin-login/admin-login.html
@@ -59,7 +59,7 @@
                 </button>
             </form>
 
-            <a href="#" class="forgot-link">¿Olvidó su contraseña?</a>
+            <!-- Link 'olvidó contraseña' eliminado por solicitud -->
         </div>
     </div>
 </div>
